--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pick-a-book</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <!-- Шапка Grid элемент  -->
+      <header class="header">        
+        <h1 class="header__title">Pick-a-book</h1>
+      </header>
+    <main class="main">
+      <section class="cards">
+        <div class="cards__items"></div>
+      </section>
+    </main>
+    <script type="text/javascript" src="/js/data.json"></script>
+    <script src="/js/script.js"></script>
+  </body>
 </html>
